--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
     "tests/**/*.tsx", "data/starters.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/**/vue-hotkey/*.ts",
   ]
 }
